# ElasticityTest

./: .gitignore  CMakeLists.txt  ElaStd.h  README.md  ela2.cc
doc/: docfile
include/: basis_funs.h  basis_funs.tpp  body_force.h  body_force.tpp  directory.h  ela_basis.h  ela_basis.tpp  ela_ms.h  ela_ms.tpp  ela_std.h  ela_std.tpp  fine_ms_solution_function.h  fine_ms_solution_function.tpp  forces_and_lame_parameters.h  forces_and_lame_parameters.tpp  forces_and_parameters.h  forces_and_parameters.tpp  include_lame_prm.h  lame_prm_base.h  lame_prm_const.h  lame_prm_const.tpp  lame_prm_layers.h  lame_prm_layers.tpp  lame_prm_osc.h  lame_prm_osc.tpp  myexceptions.h  mytools.h  mytools.tpp  postprocessing.h  postprocessing.tpp  process_parameter_file.h  process_parameter_file.tpp  run_problem.h  run_problem_compare.h  run_problem_ms.h  run_problem_std.h
parameter_files/: prm_1.in  prm_debug.in  prm_fibre.in  prm_horizontal.in  prm_msbasis.in  prm_oscillating.in  prm_oscillations.in  prm_vert_rot.in  prm_vertical.in  prm_x-dir.in  prm_y-dir.in  prm_y-dir_rot.in  prm_z-dir.in  prm_z-dir_rot.in
source/: CMakeLists.txt  basis_funs.cc  body_force.cc  directory.cc  ela_basis.cc  ela_ms.cc  ela_std.cc  fine_ms_solution_function.cc  forces_and_lame_parameters.cc  forces_and_parameters.cc  lame_parameters.cc  main.cxx  main_compare.cxx  main_ms.cxx  main_std.cxx  mytools.cc  postprocessing.cc  process_parameter_file.cc  run_problem.cc  run_problem_compare.cc  run_problem_ms.cc  run_problem_std.cc
